feat: настроена работа с babel и webpack, UI веб клиента подключен к игре и настроены координаты форм UI

--- a/view/htmlClient/index.htm
+++ b/view/htmlClient/index.htm
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<link rel="stylesheet" href="htmlClient/style.css">
-		<script src="module.js">
-
-		</script>
+<html lang="en" dir="ltr">
+  <head>
+    	<meta charset="utf-8">
+    	<title>Game From Scratch</title>
+		<link rel="stylesheet" href="style.css">
+		<script src="module.js"></script>
 	</head>
 	<body>
 		<div class="app">
@@ -15,7 +15,7 @@
 					<p id="bllvlcounter">1</p>
 				</div>
 				<div class="game-scoreblock">
-					<img src="htmlClient/assets/scores.png">
+					<img src="assets/scores.png">
 					<p id="blscorecounter">10000</p>
 				</div>
 				<div class="game-steps">
@@ -25,13 +25,14 @@
 			</div>
 			<div class="game-controls">
 				<div class="control-shake">
-					<img src="htmlClient/assets/shake.png">
+					<img src="assets/shake.png">
 					<div id="shake-counter" class="shake-counter">3</div>
 				</div>
 				<div class="control-settings">
-					<img src="htmlClient/assets/settings.png">
+					<img src="assets/settings.png">
 				</div>
 			</div>
 		</div>
 	</body>
+	<script type="text/javascript" src="view/htmlClient/compiled/MAIN.js"></script>
 </html>
