--- a/view/htmlClient/index.html
+++ b/view/htmlClient/index.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<div class="app">
-			<canvas id="images_demo" width="570" height="570" class="game-field"></canvas>
+			<!-- <canvas id="images_demo" width="570" height="570" class="game-field"></canvas> -->
+			<canvas id="canvas" width="570" height="570" class="game-field"></canvas>
 			
 			<div class="game-lvlnscore">
 				<div class="game-lvlcircle">
