--- a/view/htmlClient/index.html
+++ b/view/htmlClient/index.html
@@ -8,7 +8,6 @@
 	</head>
 	<body>
 		<div class="app">
-			<!-- <canvas id="images_demo" width="570" height="570" class="game-field"></canvas> -->
 			<canvas id="canvas" width="570" height="570" class="game-field"></canvas>
 			
 			<div class="game-lvlnscore">
@@ -27,7 +26,7 @@
 			<div class="game-controls">
 				<div class="control-shake">
 					<img src="assets/shake.png">
-					<div id="shake-counter" class="shake-counter">3</div>
+					<div id="shake-counter" class="shake-counter"></div>
 				</div>
 				<div class="control-settings">
 					<img src="assets/settings.png">
