feat: Web-клиент - отображение текущего и максимального счета, остатка шагов в UI

--- a/view/htmlClient/index.html
+++ b/view/htmlClient/index.html
@@ -19,7 +19,7 @@
 					<p id="blscorecounter">10000</p>
 				</div>
 				<div class="game-steps">
-					<p>ШАГИ</p>
+					<p>ОСТАЛОСЬ ШАГОВ</p>
 					<p id="blstepscounter">10/10</p>
 				</div>
 			</div>
