--- a/view/htmlClient/index.html
+++ b/view/htmlClient/index.html
@@ -4,6 +4,7 @@
     	<meta charset="utf-8">
     	<title>Game From Scratch</title>
 		<link rel="stylesheet" href="style.css">
+		<script src="libs/fabric.js/3.0.0/fabric.min.js"></script>
 		<script src="module.js"></script>
 	</head>
 	<body>
