--- a/view/htmlClient/index.html
+++ b/view/htmlClient/index.html
@@ -5,7 +5,7 @@
     	<title>Game From Scratch</title>
 		<link rel="stylesheet" href="style.css">
 		<script src="libs/fabric.js/3.0.0/fabric.min.js"></script>
-		<script src="module.js"></script>
+		<script src="htmlCLient.js"></script>
 	</head>
 	<body>
 		<div class="app">
