feat: UI налажен вклик по телепорту, сгорание самого тайла телепорта с анимацией

--- a/view/htmlClient/index.html
+++ b/view/htmlClient/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     	<meta charset="utf-8">
-    	<title>Game From Scratch</title>
+    	<title>Blast Game</title>
 		<link rel="stylesheet" href="style.css">
 		<script src="libs/fabric.js/3.0.0/fabric.min.js"></script>
 		<script src="htmlCLient.js"></script>
