--- a/view/htmlClient/index.html
+++ b/view/htmlClient/index.html
@@ -10,7 +10,6 @@
 	<body>
 		<div class="app">
 			<canvas id="canvas" width="570" height="570" class="game-field"></canvas>
-			
 			<div class="game-lvlnscore">
 				<div class="game-lvlcircle">
 					<p id="bllvlcounter">1</p>
@@ -32,6 +31,13 @@
 				<div class="control-settings">
 					<img src="assets/settings.png">
 				</div>
+			</div>
+			<div class="game-resultbox active">
+				<h3 class="result-title">ПОБЕДА!</h3>
+				<div class="result-text">
+					<p class="result-info">Уровень 1 пройден</p>
+					<p class="result-score">270/250 очков</p></div>
+				<div class="result-button">Далее</div>
 			</div>
 		</div>
 	</body>
