feat: UI - режим игры на прохождение уровней с постепенным усложнением

--- a/view/htmlClient/index.html
+++ b/view/htmlClient/index.html
@@ -32,12 +32,12 @@
 					<img src="assets/settings.png">
 				</div>
 			</div>
-			<div class="game-resultbox active">
-				<h3 class="result-title">ПОБЕДА!</h3>
+			<div class="game-resultbox">
+				<h3 class="result-title"></h3>
 				<div class="result-text">
-					<p class="result-info">Уровень 1 пройден</p>
-					<p class="result-score">270/250 очков</p></div>
-				<div class="result-button">Далее</div>
+					<p class="result-info"></p>
+					<p class="result-score"></p></div>
+				<div class="result-button"></div>
 			</div>
 		</div>
 	</body>
