--- a/view/htmlClient/index.html
+++ b/view/htmlClient/index.html
@@ -5,7 +5,8 @@
     	<title>Blast Game</title>
 		<link rel="stylesheet" href="style.css">
 		<script src="libs/fabric.js/3.0.0/fabric.min.js"></script>
-		<script src="htmlCLient.js"></script>
+		<script src="./compiled/MAIN.js"></script>
+		<script src="htmlClient.js"></script>
 	</head>
 	<body>
 		<div class="app">
@@ -65,5 +66,4 @@
 			</div>
 		</div>
 	</body>
-	<script type="text/javascript" src="view/htmlClient/compiled/MAIN.js"></script>
 </html>
