--- a/view/htmlClient/index.html
+++ b/view/htmlClient/index.html
@@ -5,7 +5,7 @@
     	<title>Blast Game</title>
 		<link rel="stylesheet" href="style.css">
 		<script src="libs/fabric.js/3.0.0/fabric.min.js"></script>
-		<script src="./compiled/MAIN.js"></script>
+		<script src="view/htmlClient/compiled/MAIN.js"></script>
 		<script src="htmlClient.js"></script>
 	</head>
 	<body>
