--- a/view/htmlClient/style.css
+++ b/view/htmlClient/style.css
@@ -188,3 +188,43 @@ body{
     margin-left: 24px;
     margin-top: 24px;
 }
+@media (max-width: 600px) and (orientation: portrait){
+        .canvas-container{
+            height: 570px;
+            left: 201px;
+            position: relative;
+            scale: 1.65;
+            top: 324px;
+            user-select: none;
+            width: 570px;
+        }
+        .app>.game-lvlnscore{
+            display: -webkit-box;
+            height: 122px;
+            left: 285px;
+            top: 16px;
+            width: 679px;
+        }
+        .app .game-lvlcircle{
+            height: 80px;
+            margin-left: 20px;
+            margin-top: 17px;
+            width: 80px;
+        }
+        .app .game-lvlcircle>p{
+            font-size: 36px;
+            margin: 18px;
+        }
+        .game-scoreblock{
+            height: 79px;
+            margin-left: 20px;
+            margin-top: 19px;
+            width: 246px;
+        }
+        .game-steps{
+            height: 79px;
+            margin-left: 20px;
+            margin-top: 19px;
+            width: 246px;
+        }
+    }
