fix: UI фикс шрифтов

--- a/view/htmlClient/index.html
+++ b/view/htmlClient/index.html
@@ -16,7 +16,7 @@
 					<p id="bllvlcounter">1</p>
 				</div>
 				<div class="game-scoreblock">
-					<img src="assets/scores.png">
+					<p>ОЧКИ</p>
 					<p id="blscorecounter">10000</p>
 				</div>
 				<div class="game-steps">
