--- a/view/htmlClient/style.css
+++ b/view/htmlClient/style.css
@@ -199,7 +199,7 @@ body{
     margin-left: 24px;
     margin-top: 24px;
 }
-@media screen and (min-width: 300px) and (max-width: 1081px) {
+@media screen and (min-width: 300px) and (max-width: 1081px) and (orientation: portrait){
 
         .canvas-container{
             height: 570px;
